trying to fix user details and book listcontainer widths and spacing

--- a/client/src/components/BookList.css
+++ b/client/src/components/BookList.css
@@ -1,7 +1,6 @@
 .book-list {
   width: calc((450px * 2) + 2em);
   height: 100vh;
-  margin: 5px;
 }
 
 .book-list h2 {
